--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
     <string name="app_name">HelPets</string>
 
-    <string name="action_notifications">Notifications</string>
+    <!-- Strings used for menu buttons -->
+
+    <string name="action_notifications">Notificaciones</string>
     <string name="action_logout">Cerrar sesión</string>
+    <string name="action_return">Regresar</string>
+    <string name="action_edit_user">Editar usuario</string>
 
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
