Agregando actividades de inicio de sesion y registro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
     <string name="action_logout">Cerrar sesión</string>
     <string name="action_return">Regresar</string>
     <string name="action_edit_user">Editar usuario</string>
+
+    <!--  -->
+    <string name="greet">BIENVENIDO</string>
+    <string name="font">roboto</string>
+
+    <!-- Log In Strings -->
+    <string name="user">Usuario </string>
+    <string name="password">Contraseña </string>
+    <string name="login">Iniciar Sesion</string>
+
 </resources>
