--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="action_notifications">Notificaciones</string>
     <string name="action_logout">Cerrar sesión</string>
     <string name="action_return">Regresar</string>
+    <string name="action_user">Perfil de usuario</string>
     <string name="action_edit_user">Editar usuario</string>
+    <string name="action_search">Buscar publicación</string>
 
     <!--  -->
     <string name="greet">BIENVENIDO</string>
