Agregado - Toolbar en la actividad de crear post y Agregada - Funcionalidad para obtener cantidad de likes en un post

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="action_user">Perfil de usuario</string>
     <string name="action_edit_user">Editar usuario</string>
     <string name="action_search">Buscar publicación</string>
+    <string name="action_create">Crear publicación</string>
 
     <!--  -->
     <string name="greet">BIENVENIDO</string>
