Finalizada - Funcionalidad para agregar comentarios en los posts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="font">roboto</string>
 
     <!-- Log In Strings -->
+    <string name="comment">Agregar un comentario </string>
     <string name="user">Usuario </string>
     <string name="password">Contraseña </string>
     <string name="login">Iniciar Sesion</string>
